# IEA

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/agent_banana/: llm_grounding_advisor.py  models.py  nano_banana.py  pipeline.py  quality.py  react_executor.py  seam_detector.py  server.py  targeting.py  tool_registry.py  vision_old.py  vlm_critic.py
tests/: test_agent_banana.py
