[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-banana"
version = "0.1.0"
description = "End-to-end image editing agent with RL-style planning, Nano Banana previews, and Florence-2 grounding."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "transformers>=4.48.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=1.0.9",
    "safetensors>=0.4.5",
]

[project.scripts]
agent-banana-edit = "agent_banana.cli:main"
agent-banana-serve = "agent_banana.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
